--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,23 @@
-*/config/development
-*/logs/log-*.php
-*/logs/!index.html
-*/cache/*
-*/cache/!index.html
-*/cache/!.htaccess
+######################
+## Windows & mac stuff
+######################
+
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Mac crap
+.DS_Store
+
+
+########### Translations
+*.mo
+
+# PhpStorm project folder
+.idea/
